<resources>
    <string name="app_name">ProyectoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="botonAceptar">Aceptar</string>
    <string name="botonCancelar">Cancelar</string>
    <string name="botonFiltrar">Filtrar</string>
    <string name="botonOpciones">Opciones</string>
    <string name="botonNuevoProducto">Nuevo Producto</string>
    <string name="botonNombre">Nombre</string>
    <string name="botonCantidad">Cantidad</string>
    <string name="botonCantidadMinima">Cantidad Mínima</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="buttonUser">foto</string>
    <integer name="columnCount">1</integer>
    <integer name="rowCount">1</integer>
    <string name="nombre">Nombre</string>
    <string name="usuarios">Seleccione su Usuario</string>
    <string name="contrasena">Inserte su Contraseña</string>
    <string name="nuevo">Nuevo Producto</string>
    <string name="nuevoUsuario">Nuevo Usuario</string>
    <string name="anadirUsuario">Añadir Usuario</string>
    <string name="anadirProducto">Añadir Producto</string>
    <string name="eliminarUsuario">Eliminar Usuario</string>
    <string name="eliminarProducto">Eliminar Producto</string>
    <string name="nombreUsuario">Nombre de Usuario</string>
    <string name="contrasenaUsuario">Contraseña</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="rol">Empleado</string>
    <string name="nombreProducto">Nombre</string>

    <string name="eliminar">Eliminar</string>
    <string name="habilitar">Habilitado</string>
    <string name="desavilitar">Deshabilitado</string>
    <string name="editar">Editar Producto</string>
    <string name="editUser">Editar Usuario</string>
    <string name="precio">Precio</string>
    <string name="stock">Cantidad</string>
    <string name="stockMin">Cantidad Minima</string>
    <string name="preciou">Precio Unitario</string>
    <string name="cantidad">Cantidad</string>
    <string name="descripcion">Descripción</string>
    <string name="edit">Editar</string>
    <string name="anadir">Añadir</string>
    <string name="cancelar">Cancelar</string>
    <string name="filtrar">Filtrar</string>
    <string name="opciones">Opciones</string>
    <string name="perfiles">Perfiles</string>
    <string name="albaranes">Alabaranes</string>
    <string name="inventario">Inventario</string>
    <!-- Albaranes -->
    <string name="add_detalle">Agregar detalle</string>
    <string name="volver">Volver</string>

    <string name="nuevoAlbaran">Nuevo Albaran</string>
    <string name="fecha">Fecha</string>
    <string name="nif">NIF</string>
    <string name="importe">Cantidad</string>
    <string name="estado">Pagado</string>
    <string name="esta">Estado</string>

     <string name="nuevo_proveedor">Nuevo Proveedor</string>
    <string name="nuevo_albaran">Nuevo Albarán</string>
    <string name="completar_albaran">Completar Albarán</string>
     <string name="mes_actual">Filtrar por mes actual</string>
    <string name="filtrar_rango">Filtrar por fecha</string>
     <!-- Proveedores -->
    <string name="nuevoProveedor">Nuevo Proveedor</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Dirección</string>
    <string name="informe">Informe</string>
    <!-- Usuarios -->
    <string name="id">ID</string>
i
    <!-- inventario -->

    <string-array name="filtros">
        <item>Todos los productos</item>
        <item>Productos en mínimos</item>
        <item>Productos deshabilitados</item>
    </string-array>
    <string name="hint_email">Introduce email para enviar</string>
    <string name="btn_enviar_inventario">Enviar Inventario por correo</string>
    <string name="btn_cancelar">Cancelar</string>


</resources>

