<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTituloAlbaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevoAlbaran"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        app:layout_constraintTop_toBottomOf="@id/txtTituloAlbaran"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editCif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nif"
        app:layout_constraintTop_toBottomOf="@id/editNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/editCantidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad"
        app:layout_constraintTop_toBottomOf="@id/editCif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <CheckBox
        android:id="@+id/checkEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        app:layout_constraintTop_toBottomOf="@id/editCantidad"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp" />

    <ImageButton
        android:id="@+id/txtFecha"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/buttonUser"
        app:srcCompat="@drawable/camara"
        app:layout_constraintTop_toBottomOf="@id/checkEstado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calendarView"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="@+id/txtFecha"
        app:layout_constraintStart_toEndOf="@+id/txtFecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/txtFecha"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#EC407A"
        android:text="@string/cancelar"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@+id/btnAnadir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFecha" />

    <Button
        android:id="@+id/btnAnadir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anadir"
        android:backgroundTint="#EC407AFF"
        android:textColor="#fff"
        app:layout_constraintTop_toTopOf="@+id/btnCancel"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
